--- a/frontend/admin/templates/partials/article.html
+++ b/frontend/admin/templates/partials/article.html
@@ -32,16 +32,17 @@
 						<div class="form-group">
 							
 							<div class="input-append date">
-								<input type="text" ng-model="article.published_date" class="form-control" id="published_date" name="published_date" data-date-format="dd-mm-yyyy" required />
+								<label class="control-label">To be published on 5ives on</label>
+								<input type="text" ng-disabled="article.is_not_allocated == 1" ng-model="article.published_date" class="form-control" id="published_date" name="published_date" data-date-format="dd-mm-yyyy" required />
 								<span class="add-on"><i class="icon-th"></i></span>
 							</div>
 
-							<input type="radio" ng-model="article.position_no" name="position_no" value="1">1
-							<input type="radio" ng-model="article.position_no" name="position_no" value="2">2
-							<input type="radio" ng-model="article.position_no" name="position_no" value="3">3
-							<input type="radio" ng-model="article.position_no" name="position_no" value="4">4
-							<input type="radio" ng-model="article.position_no" name="position_no" value="5">5
-							
+							<input type="radio" ng-disabled="article.is_not_allocated == 1" ng-model="article.position_no" name="position_no" value="1">1
+							<input type="radio" ng-disabled="article.is_not_allocated == 1" ng-model="article.position_no" name="position_no" value="2">2
+							<input type="radio" ng-disabled="article.is_not_allocated == 1" ng-model="article.position_no" name="position_no" value="3">3
+							<input type="radio" ng-disabled="article.is_not_allocated == 1" ng-model="article.position_no" name="position_no" value="4">4
+							<input type="radio" ng-disabled="article.is_not_allocated == 1" ng-model="article.position_no" name="position_no" value="5">5
+
 							<div class="clear"></div>
 							<input type="checkbox" ng-model="article.is_not_allocated" id="is_not_allocated" ng-checked="article.is_not_allocated == 1">Not Allocated Yet
                         </div>  
@@ -49,13 +50,18 @@
                 </div>
 				
 				<div class="row">
-					<div class="col-sm-12">
+					<div class="col-sm-6">
 						<label class="control-label">Category</label>
-						
 						<select class="form-control" ng-model="selectedCategoryOption" ng-options="c.name for c in categories" required>
 						<option value="">- Please select</option>
 						</select>
-						
+					</div>
+					
+					<div class="col-sm-6">
+						<label class="control-label">Location</label>
+						<select class="form-control" ng-model="selectedLocationOption" ng-options="l.name for l in locations" required>
+						<option value="">- Please select</option>
+						</select>
 					</div>
 				</div>
                 
