--- a/frontend/admin/templates/partials/articles.html
+++ b/frontend/admin/templates/partials/articles.html
@@ -16,6 +16,15 @@
 	
 	<div class="row">
 		<div class="col-sm-4">     
+			<label class="control-label">Location</label>
+			<select class="form-control" ng-model="selectedLocationOption" ng-change="load()" ng-options="l.name for l in locations" required>
+				<option value="">- Please select</option>
+			</select>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-sm-4">     
 			<div id="published_date"></div>
 		</div>
 		<div class="col-sm-8">    
