Update published date

--- a/frontend/admin/templates/partials/article.html
+++ b/frontend/admin/templates/partials/article.html
@@ -33,7 +33,7 @@
 							
 							<div class="input-append date">
 								<label class="control-label">To be published on 5ives on</label>
-								<input type="text" ng-disabled="article.is_not_allocated == 1" ng-model="article.published_date" class="form-control" id="published_date" name="published_date" data-date-format="dd-mm-yyyy" required />
+								<input type="text" ng-disabled="article.is_not_allocated == 1" ng-model="article.published_date" class="form-control" id="published_date" name="published_date" data-date-format="dd/mm/yyyy" required />
 								<span class="add-on"><i class="icon-th"></i></span>
 							</div>
 
