--- a/frontend/admin/templates/admin.html
+++ b/frontend/admin/templates/admin.html
@@ -12,9 +12,12 @@
     <link rel="stylesheet" type="text/css" href="{{ BASE_URL }}frontend/admin/css/fileuploader.css" />
     
     <!-- Core Script Dependencies -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" ></script>
+	<script type="text/javascript" src="{{ BASE_URL }}frontend/admin/js/jquery-1.10.2.js"></script>
+	<script type="text/javascript" src="{{ BASE_URL }}frontend/admin/js/angular.min.js"></script>
+	<script type="text/javascript" src="{{ BASE_URL }}frontend/admin/js/angular-route.min.js"></script>
+    <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" ></script>
     <script src="//code.angularjs.org/1.2.6/angular.min.js"></script>
-    <script src="//code.angularjs.org/1.2.6/angular-route.min.js"></script>
+    <script src="//code.angularjs.org/1.2.6/angular-route.min.js"></script> -->
     <!-- End Core Script Dependencies -->     
     
     <script type="text/javascript">
