--- a/frontend/admin/templates/partials/dashboard.html
+++ b/frontend/admin/templates/partials/dashboard.html
@@ -9,10 +9,10 @@
 
 <label for="">Articles</label>
 <div class="table-responsive" id="statistics_articles">
-	<table class="table table-striped table-hover" ui-draggable="{true}">
+	<table class="table table-striped table-hover">
 		<thead>
 			<tr>
-				<th>Location</th>
+				<th width="10%">Location</th>
 				<th>1</th>
 				<th>2</th>
 				<th>3</th>
@@ -29,6 +29,20 @@
 				<td>{{loc_statistics.show_day[3]}}</td>
 				<td>{{loc_statistics.show_day[4]}}</td>
 			</tr>
+		</tbody>
+	</table>
+</div> 
+
+
+<label for="">Sponders</label>
+<div class="table-responsive" id="statistics_schedules">
+	<table class="table table-striped table-hover">
+		<thead>
+			<tr>
+				<th width="10%">Location</th>
+			</tr>
+		</thead>
+		<tbody>
 		</tbody>
 	</table>
 </div> 
