--- a/frontend/admin/templates/partials/dashboard.html
+++ b/frontend/admin/templates/partials/dashboard.html
@@ -36,7 +36,7 @@
 
 <label for="">Sponders</label>
 <div class="table-responsive" id="statistics_schedules">
-	<table class="table table-striped table-hover">
+	<table class="table">
 		<thead>
 			<tr>
 				<th width="10%">Location</th>
