Try to fix load epic

--- a/frontend/admin/templates/partials/dashboard.html
+++ b/frontend/admin/templates/partials/dashboard.html
@@ -54,7 +54,7 @@
             <div class="modal-content">
                 <ul class="nav nav-tabs">
 					<li class="active"><a data-target="#tab_details" data-toggle="tab"><strong>Sponsor Details</strong></a></li>
-					<li class="hideOnNew"><a data-target="#tab_schedule" data-toggle="tab"><strong>Schedule Details</strong></a></li>
+					<li class="hideOnNew"><a ng-click="loadSchedule()" data-target="#tab_schedule" data-toggle="tab"><strong>Schedule Details</strong></a></li>
 				</ul> 
 				
 				<div class="modal-body">
