--- a/frontend/admin/templates/partials/articles.html
+++ b/frontend/admin/templates/partials/articles.html
@@ -6,7 +6,7 @@
     
     <div class="page-header">
 		<a href="#!/articles/detail/0" class="pull-right btn btn-sm btn-primary"><i class="fa fa-plus"></i> Add New Article</a>
-        <h3><strong>5iles for a day</strong></h3>
+        <h3><strong>5ives for a day</strong></h3>
     </div>
     
     <form id="frmFilters" name="frmFilters" action="article/list" method="post">   
