--- a/frontend/admin/templates/admin.html
+++ b/frontend/admin/templates/admin.html
@@ -66,7 +66,7 @@
                     <li id="navSponsors" class="dropdown">
                         <a href="#!sponsors">Sponsors</a>
                     </li>  
-                    <li id="navSettings" class="dropdown">
+                    <li id="navSettings" class="dropdown hidden">
                         <a href="#!settings">Settings</a>
                     </li>                                                                                                
                 </ul>
