--- a/frontend/admin/templates/partials/category.html
+++ b/frontend/admin/templates/partials/category.html
@@ -26,7 +26,11 @@
                         <div class="form-group">
                             <label class="control-label">Category Name</label>
                             <input type="text" ng-model="category.name" class="form-control" placeholder="Category Name" id="name" name="name" required />
-                        </div>                                         
+                        </div>    
+                        
+                        <div class="form-group">
+                            <input type="checkbox" ng-model="category.enabled" id="enabled" ng-checked="category.enabled == 1"> Enabled
+                        </div>                                                              
                     </div>
                     <div class="col-sm-4"></div>
                     <div class="col-sm-4"></div>
