--- a/frontend/admin/templates/partials/dashboard.html
+++ b/frontend/admin/templates/partials/dashboard.html
@@ -9,7 +9,7 @@
 
 <label for="">Articles</label>
 <div class="table-responsive" id="statistics_articles">
-	<table class="table table-striped table-hover">
+	<table id="tblDashArticles" class="table table-striped table-hover">
 		<thead>
 			<tr>
 				<th width="10%">Location</th>
@@ -23,7 +23,7 @@
 		<tbody>
 			<tr ng-repeat="loc_statistics in statistics_articles">
 				<td>{{loc_statistics.location}}</td>
-				<td>{{loc_statistics.show_day[0]}}</td>
+				<td><a href="#!articles?location={{loc_statistics.location_id}}&amp;date={{loc_statistics.show_day[0]}}">{{loc_statistics.show_day[0]}}</a></td>
 				<td>{{loc_statistics.show_day[1]}}</td>
 				<td>{{loc_statistics.show_day[2]}}</td>
 				<td>{{loc_statistics.show_day[3]}}</td>
@@ -34,7 +34,7 @@
 </div> 
 
 
-<label for="">Sponders</label>
+<label for="">Sponsors</label>
 <div class="table-responsive" id="statistics_schedules">
 	<table class="table">
 		<thead>
