--- a/frontend/admin/templates/partials/location.html
+++ b/frontend/admin/templates/partials/location.html
@@ -26,6 +26,10 @@
                         <div class="form-group">
                             <label class="control-label">Location Name</label>
                             <input type="text" ng-model="location.name" class="form-control" placeholder="Location Name" id="name" name="name" required />
+                        </div>                                             
+                        
+                        <div class="form-group">
+                            <input type="checkbox" ng-model="location.enabled" id="enabled" ng-checked="location.enabled == 1"> Enabled
                         </div>                                         
                     </div>
                     <div class="col-sm-4"></div>
