--- a/frontend/admin/templates/partials/dashboard.html
+++ b/frontend/admin/templates/partials/dashboard.html
@@ -33,7 +33,7 @@
 	</table>
 </div> 
 
-
+<div class="hidden">
 <label for="">Sponsors</label>
 <div class="table-responsive" id="statistics_schedules">
 	<table class="table">
@@ -46,6 +46,7 @@
 		</tbody>
 	</table>
 </div> 
+</div>
 
 
 <!-- Schedule modal -->
