--- a/frontend/admin/templates/partials/dashboard.html
+++ b/frontend/admin/templates/partials/dashboard.html
@@ -33,20 +33,22 @@
 	</table>
 </div> 
 
-<div class="hidden">
+
 <label for="">Sponsors</label>
 <div class="table-responsive" id="statistics_schedules">
 	<table class="table">
 		<thead>
 			<tr>
-				<th width="10%">Location</th>
+				<th width="10%" rowspan="2">Location</th>
+			</tr>
+			<tr>
 			</tr>
 		</thead>
 		<tbody>
 		</tbody>
 	</table>
 </div> 
-</div>
+
 
 
 <!-- Schedule modal -->
