Some fixes on dashboard

--- a/frontend/admin/templates/partials/dashboard.html
+++ b/frontend/admin/templates/partials/dashboard.html
@@ -49,6 +49,10 @@
 	</table>
 </div> 
 
+<div>
+	<a href="#!/sponsors" class="pull-left btn btn-sm btn-primary"><i class="fa fa-plus"></i> Add Sponsor To Schedule</a>
+</div>
+
 
 
 <!-- Schedule modal -->
